# debwatch

./: ChangeLog  Makefile.am  TODO  autogen.sh  configure.ac
misc/m4/: Makefile.am
misc/makefiles/: Makefile.am
misc/specs/: Makefile.am  debwatch.spec.in
src/: Makefile.am
src/cmds/: Makefile.am  debwatch  debwatch-url
src/gauche/: Makefile.am  debwatch.scm
